Director results and result limiting by a number